[gd_scene load_steps=13 format=3 uid="uid://bwi0kxnjh6pwu"]

[ext_resource type="Script" path="res://scripts/GameScene.gd" id="1_32jtk"]
[ext_resource type="PackedScene" uid="uid://dlmg1biueiwe3" path="res://scenes/steak.tscn" id="2_0yifk"]
[ext_resource type="Script" path="res://scripts/CanvasLayer.gd" id="3_ygwwl"]
[ext_resource type="Texture2D" uid="uid://da1sc4nemnabf" path="res://textures/healthbar/no health.png" id="4_emr8j"]
[ext_resource type="Texture2D" uid="uid://btdsbdncsry2f" path="res://textures/healthbar/empty health bar.png" id="5_p12ae"]
[ext_resource type="Texture2D" uid="uid://dm6avgf1dq0x0" path="res://textures/healthbar/health.png" id="6_rrvcr"]
[ext_resource type="Script" path="res://scripts/PlayerScript.gd" id="7_mmjfp"]
[ext_resource type="Texture2D" uid="uid://d04m55u6mjl6l" path="res://textures/player/CatClose.png" id="8_1f828"]
[ext_resource type="Script" path="res://scripts/HealthBar.gd" id="8_fg4ht"]
[ext_resource type="Texture2D" uid="uid://hmiu2ca8qbqx" path="res://textures/player/CatOpen.png" id="9_dyoub"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1yseq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_1f828")
}, {
"duration": 1.0,
"texture": ExtResource("9_dyoub")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pjv5u"]
radius = 132.0
height = 364.0

[node name="GameScene" type="Node2D"]
script = ExtResource("1_32jtk")
food_scene = ExtResource("2_0yifk")
metadata/_edit_horizontal_guides_ = [-161.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_ygwwl")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 16.0
grow_horizontal = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(63.5, 0)

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource("4_emr8j")
texture_over = ExtResource("5_p12ae")
texture_progress = ExtResource("6_rrvcr")
script = ExtResource("8_fg4ht")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Steak" parent="." instance=ExtResource("2_0yifk")]
position = Vector2(-61, 1064)
nutrition_value = 5
food_name = "steak"

[node name="Player" type="Node2D" parent="."]
position = Vector2(435, 887)
scale = Vector2(0.25, 0.25)

[node name="PlayerArea2D" type="Area2D" parent="Player" groups=["player"]]
script = ExtResource("7_mmjfp")
Speed = 200
HealthPoints = 100
hunger_decrease_rate = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/PlayerArea2D"]
sprite_frames = SubResource("SpriteFrames_1yseq")
animation = &"Idle"
autoplay = "Idle"
frame = 1

[node name="PlayerBasis" type="Sprite2D" parent="Player/PlayerArea2D"]
visible = false
texture = ExtResource("8_1f828")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArea2D"]
position = Vector2(113, 32)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pjv5u")

[node name="Timer" type="Timer" parent="Player/PlayerArea2D"]
autostart = true

[connection signal="area_entered" from="Player/PlayerArea2D" to="Player/PlayerArea2D" method="_on_area_entered"]
[connection signal="health_changed" from="Player/PlayerArea2D" to="CanvasLayer/VBoxContainer/HealthBar" method="_on_player_area_2d_health_changed"]
[connection signal="timeout" from="Player/PlayerArea2D/Timer" to="Player/PlayerArea2D" method="_on_timer_timeout"]
